--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,31 @@
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Phone Finder</h1>
+
+    <!-- header area or search box html start here  -->
+    <header class="container">
+        <!-- search box  -->
+        <div class="text-center mt-3 shadow-lg p-4 rounded-3">
+            <h1 class="text-primary">Phone Finder</h1>
+            <div class="my-4 col-12 col-md-6 mx-auto d-flex gap-2">
+                <input type="text" class="form-control" id="search-input" aria-describedby="emailHelp" placeholder="Find Your Phone">
+                <button class="btn btn-primary">Search</button>
+            </div>
+        </div>
+    </header>
+
+    <!-- main body  -->
 
 
 
-    
+
+
     <!-- main js link  -->
     <script src="js/main.js"></script>
     <!-- bootsrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
