--- a/index.html
+++ b/index.html
@@ -27,7 +27,45 @@
     </header>
 
     <!-- main body  -->
+    <main class="container">
+        <!-- phone no found -->
+        <div class="d-none justify-content-center">
+            <div class="col-12 col-md-6 shadow-lg mt-5 p-5">
+                <h1 class="text-primary text-center">No phone found</h1>
+            </div>
+        </div>
 
+
+        <!-- spinner html start  -->
+        <div class="d-flex justify-content-center mt-5">
+            <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+
+
+        <!-- phone display area html -->
+        <div class="mt-5 d-none">
+            <div class="row gy-4">
+                <div class="col-12 col-md-4">
+                    <div class="shadow-lg rounded-3 p-4">
+                        <div class="d-flex justify-content-center align-items-center"><img src="images/apple-iphone-13-mini.jpg" alt=""></div>
+                        <div class="text-center mt-3">
+                            <h3 class="text-primary">iPhone 13 mini</h3>
+                            <h5>Brand : <span>Apple</span></h5>
+                            <button class="btn btn-primary mt-2">Details</button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- see all phone html start  -->
+                <div class="d-flex justify-content-center my-5">
+                    <button class="btn btn-primary">See All Phone</button>
+                </div>
+
+            </div>
+    </main>
 
 
 
