--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <!-- phone no found -->
         <div class="d-none justify-content-center">
             <div class="col-12 col-md-6 shadow-lg mt-5 p-5">
-                <h1 class="text-primary text-center">No phone found</h1>
+                <h1 class="text-warning text-center">Oops!! No phone found</h1>
             </div>
         </div>
 
 
         <!-- spinner html start  -->
-        <div class="d-flex justify-content-center mt-5">
+        <div class="d-none justify-content-center mt-5">
             <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
@@ -45,7 +45,7 @@
 
 
         <!-- phone display area html -->
-        <div class="mt-5 d-none">
+        <div class="mt-5 d-block">
             <div class="row gy-4">
                 <div class="col-12 col-md-4">
                     <div class="shadow-lg rounded-3 p-4">
@@ -53,7 +53,7 @@
                         <div class="text-center mt-3">
                             <h3 class="text-primary">iPhone 13 mini</h3>
                             <h5>Brand : <span>Apple</span></h5>
-                            <button class="btn btn-primary mt-2">Details</button>
+                            <button class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Details</button>
                         </div>
                     </div>
                 </div>
@@ -65,6 +65,33 @@
                 </div>
 
             </div>
+
+
+            <!-- image Details modal html start here  -->
+
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title text-primary" id="staticBackdropLabel">iPhone 13 mini</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="d-flex justify-content-center align-items-center"><img src="images/apple-iphone-13-mini.jpg" alt=""></div>
+                            <div class="text-center mt-3">
+                                <h3 class="text-primary">iPhone 13 mini</h3>
+                                <h5>Brand : <span>Apple</span></h5>
+
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
     </main>
 
 
