--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
         <!-- spinner html start  -->
-        <div class="d-none justify-content-center mt-5">
+        <div id="spinner" class="displayHide justify-content-center mt-5">
             <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
@@ -46,26 +46,14 @@
 
         <!-- phone display area html -->
         <div class="mt-5 d-block">
-            <div class="row gy-4">
-                <div class="col-12 col-md-4">
-                    <div class="shadow-lg rounded-3 p-4">
-                        <div class="d-flex justify-content-center align-items-center"><img src="images/apple-iphone-13-mini.jpg" alt=""></div>
-                        <div class="text-center mt-3">
-                            <h3 class="text-primary">iPhone 13 mini</h3>
-                            <h5>Brand : <span>Apple</span></h5>
-                            <button class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Details</button>
-                        </div>
-                    </div>
-                </div>
-
-
-                <!-- see all phone html start  -->
-                <div class="d-flex justify-content-center my-5">
-                    <button class="btn btn-primary">See All Phone</button>
-                </div>
+            <div class="row gy-4" id="display-phone">
 
             </div>
 
+            <!-- see all phone html start  -->
+            <div class="d-flex justify-content-center my-5">
+                <button class="btn btn-primary">See All Phone</button>
+            </div>
 
             <!-- image Details modal html start here  -->
 
