--- a/index.html
+++ b/index.html
@@ -20,21 +20,17 @@
         <div class="text-center mt-3 shadow-lg p-4 rounded-3">
             <h1 class="text-primary">Phone Finder</h1>
             <div class="my-4 col-12 col-md-6 mx-auto d-flex gap-2">
-                <input type="text" class="form-control" id="search-input" aria-describedby="emailHelp" placeholder="Find Your Phone">
-                <button id="search-btn" class="btn btn-primary">Search</button>
+                <div class="col-12">
+                    <input type="text" class="form-control" id="search-input" aria-describedby="emailHelp" placeholder="Find Your Phone">
+                    <p id="error" class="displayHide form-text text-danger">Please Search Phone By Phone Name!!</p>
+                </div>
+                <div><button id="search-btn" class="btn btn-primary">Search</button></div>
             </div>
         </div>
     </header>
 
     <!-- main body  -->
     <main class="container">
-        <!-- phone no found -->
-        <div id="notFound" class="displayHide justify-content-center">
-            <div class="col-12 col-md-6 shadow-lg mt-5 p-5">
-                <h1 class="text-warning text-center">Oops!! No phone found</h1>
-            </div>
-        </div>
-
 
         <!-- spinner html start  -->
         <div id="spinner" class="displayHide justify-content-center mt-5">
@@ -43,6 +39,12 @@
             </div>
         </div>
 
+        <!-- phone no found -->
+        <div id="notFound" class="displayHide justify-content-center">
+            <div class="col-12 col-md-6 shadow-lg mt-5 p-5">
+                <h1 class="text-warning text-center">Oops!! No phone found</h1>
+            </div>
+        </div>
 
         <!-- phone display area html -->
         <div class="mt-5 d-block">
@@ -51,34 +53,12 @@
             </div>
 
             <!-- see all phone html start  -->
-            <div class="d-flex justify-content-center my-5">
-                <button class="btn btn-primary">See All Phone</button>
+            <div id="all-data" class="d-flex justify-content-center my-5">
+                <button id="all-phone" class="btn btn-primary">See All Phone</button>
             </div>
 
             <!-- image Details modal html start here  -->
-
-            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-scrollable">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title text-primary" id="staticBackdropLabel">iPhone 13 mini</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="d-flex justify-content-center align-items-center"><img src="images/apple-iphone-13-mini.jpg" alt=""></div>
-                            <div class="text-center mt-3">
-                                <h3 class="text-primary">iPhone 13 mini</h3>
-                                <h5>Brand : <span>Apple</span></h5>
-
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Buy Now</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id="myModal"></div>
 
     </main>
 
