see all button complated

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <!-- header area or search box html start here  -->
     <header class="container">
         <!-- search box  -->
-        <div class="text-center mt-3 shadow-lg p-4 rounded-3">
+        <div class="text-center col-12 mt-3 shadow-lg p-4 rounded-3">
             <h1 class="text-primary">Phone Finder</h1>
             <div class="my-4 col-12 col-md-6 mx-auto d-flex gap-2">
-                <div class="col-12">
+                <div class="w-100">
                     <input type="text" class="form-control" id="search-input" aria-describedby="emailHelp" placeholder="Find Your Phone">
                     <p id="error" class="displayHide form-text text-danger">Please Search Phone By Phone Name!!</p>
                 </div>
@@ -53,7 +53,7 @@
             </div>
 
             <!-- see all phone html start  -->
-            <div id="all-data" class="d-flex justify-content-center my-5">
+            <div id="all-data" class="displayHide justify-content-center my-5">
                 <button id="all-phone" class="btn btn-primary">See All Phone</button>
             </div>
 
